--- a/.github/workflows/metric.yml
+++ b/.github/workflows/metric.yml
@@ -10,7 +10,8 @@ jobs:
   github-metrics:
     runs-on: ubuntu-latest
     steps:
-      - uses: lowlighter/metrics@latest
+     - name: Metrics embed
+  uses: lowlighter/metrics@v3.26
         with:
           # Your GitHub token
           token: ${{ secrets.METRICS_TOCKEN }}
