--- a/.github/workflows/metric.yml
+++ b/.github/workflows/metric.yml
@@ -16,7 +16,7 @@ jobs:
           token: ${{ secrets.METRICS_TOCKEN }}
 
           # Options
-          user: ash
+          user: Ash-ketchm
           template: classic
           base: header, activity, community, repositories, metadata
           config_timezone: Asia/Calcutta
